feat: quill module installed. create component and list component created. service structure for saving data using fake json created.

--- a/newslyapp/angular.json
+++ b/newslyapp/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/quill/dist/quill.snow.css",
               "src/styles.scss"
             ],
             "scripts": [],
