--- a/newslyapp/package.json
+++ b/newslyapp/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.3",
+    "@auth0/angular-jwt": "^5.2.0",
+    "crypto-ts": "^1.0.2",
     "express": "^4.18.2",
     "keen-slider": "^6.8.6",
     "ngx-quill": "^26.0.8",
